--- a/src/Row.css
+++ b/src/Row.css
@@ -1,3 +1,7 @@
+.row{
+  margin-left: 15px;
+  color: white;
+}
 .row_posters {
   display: flex;
   overflow-y: hidden;
@@ -40,8 +44,10 @@ img[alt]:after {
 
 .big_poster{
   max-height: 250px;
+  
 }
 
 .big_poster:hover {
   transform: scale(1.09);
 }
+
