--- a/src/Nav.css
+++ b/src/Nav.css
@@ -2,18 +2,29 @@
     display: flex;
     position: fixed;
     width: 100%;
+    height: 30px;
     top: 0;
+    z-index: 1;
+    padding: 15px;
     justify-content: space-between;
-    z-index: 2;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
+    
+}
+.nav_black{
+    background-color: #111;
 }
 .nav_logo{
-    padding: 15px;
+    left: 20px;
+    position: fixed;
     width: 80px;
     object-fit: contain;
 }
 .nav_avatar{
+    position: fixed;
+    right: 20px;
     width: 30px;
     object-fit:contain;
-    padding: 15px;
+   
     
 }
